--- a/MDK-ARM/ProjectCube/ProjectCube.build_log.htm
+++ b/MDK-ARM/ProjectCube/ProjectCube.build_log.htm
@@ -27,7 +27,14 @@ Project File Date:  09/30/2019
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'ProjectCube'
-"ProjectCube\ProjectCube.axf" - 0 Error(s), 0 Warning(s).
+compiling main.c...
+../Src/main.c(129): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+  		if((sensork > 0.1)&&(sensork <= 8)) {
+../Src/main.c: 1 warning, 0 errors
+linking...
+Program Size: Code=19800 RO-data=560 RW-data=420 ZI-data=31220  
+FromELF: creating hex file...
+"ProjectCube\ProjectCube.axf" - 0 Error(s), 1 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -50,7 +57,7 @@ Package Vendor: STMicroelectronics
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.2.0
-Build Time Elapsed:  00:00:01
+Build Time Elapsed:  00:00:07
 </pre>
 </body>
 </html>
