Zyklus 1s funktioniert 10bzw100ms noch nicht

--- a/MDK-ARM/ProjectCube/ProjectCube.build_log.htm
+++ b/MDK-ARM/ProjectCube/ProjectCube.build_log.htm
@@ -28,17 +28,13 @@ Project File Date:  10/10/2019
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'D:\Diplomarbeit\Keilv5\ARM\ARMCC\Bin'
 Build target 'ProjectCube'
 compiling main.c...
-../Src/main.c(145): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+../Src/main.c(162): warning:  #1035-D: single-precision operand implicitly converted to double-precision
   		if((sensork > 0.1)&&(sensork <= 6)) {
-../Src/main.c(88): warning:  #550-D: variable "uwtick_Hold100ms"  was set but never used
-    static int32_t uwtick_Hold100ms;
-../Src/main.c(89): warning:  #550-D: variable "uwtick_Hold1s"  was set but never used
-    static int32_t uwtick_Hold1s;
-../Src/main.c: 3 warnings, 0 errors
+../Src/main.c: 1 warning, 0 errors
 linking...
-Program Size: Code=19956 RO-data=560 RW-data=436 ZI-data=31220  
+Program Size: Code=20052 RO-data=560 RW-data=444 ZI-data=31220  
 FromELF: creating hex file...
-"ProjectCube\ProjectCube.axf" - 0 Error(s), 3 Warning(s).
+"ProjectCube\ProjectCube.axf" - 0 Error(s), 1 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -61,7 +57,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.3.0
-Build Time Elapsed:  00:00:04
+Build Time Elapsed:  00:00:03
 </pre>
 </body>
 </html>
