--- a/MDK-ARM/ProjectCube/ProjectCube.build_log.htm
+++ b/MDK-ARM/ProjectCube/ProjectCube.build_log.htm
@@ -28,13 +28,15 @@ Project File Date:  10/10/2019
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'D:\Diplomarbeit\Keilv5\ARM\ARMCC\Bin'
 Build target 'ProjectCube'
 compiling main.c...
-../Src/main.c(162): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+../Src/main.c(165): warning:  #1035-D: single-precision operand implicitly converted to double-precision
   		if((sensork > 0.1)&&(sensork <= 6)) {
-../Src/main.c: 1 warning, 0 errors
+../Src/main.c(98): warning:  #550-D: variable "diff"  was set but never used
+  	int diff ;
+../Src/main.c: 2 warnings, 0 errors
 linking...
-Program Size: Code=20052 RO-data=560 RW-data=444 ZI-data=31220  
+Program Size: Code=20040 RO-data=560 RW-data=444 ZI-data=31220  
 FromELF: creating hex file...
-"ProjectCube\ProjectCube.axf" - 0 Error(s), 1 Warning(s).
+"ProjectCube\ProjectCube.axf" - 0 Error(s), 2 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -57,7 +59,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.3.0
-Build Time Elapsed:  00:00:03
+Build Time Elapsed:  00:00:06
 </pre>
 </body>
 </html>
