--- a/MDK-ARM/ProjectCube/ProjectCube.build_log.htm
+++ b/MDK-ARM/ProjectCube/ProjectCube.build_log.htm
@@ -28,15 +28,17 @@ Project File Date:  10/10/2019
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'D:\Diplomarbeit\Keilv5\ARM\ARMCC\Bin'
 Build target 'ProjectCube'
 compiling main.c...
-../Src/main.c(165): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+../Src/main.c(173): warning:  #1035-D: single-precision operand implicitly converted to double-precision
   		if((sensork > 0.1)&&(sensork <= 6)) {
-../Src/main.c(98): warning:  #550-D: variable "diff"  was set but never used
-  	int diff ;
-../Src/main.c: 2 warnings, 0 errors
+../Src/main.c(95): warning:  #550-D: variable "testv"  was set but never used
+  	unsigned int testv=0 ;
+../Src/main.c(96): warning:  #177-D: variable "tests"  was declared but never referenced
+  	unsigned int tests=0 ;
+../Src/main.c: 3 warnings, 0 errors
 linking...
-Program Size: Code=20040 RO-data=560 RW-data=444 ZI-data=31220  
+Program Size: Code=20036 RO-data=560 RW-data=448 ZI-data=88816  
 FromELF: creating hex file...
-"ProjectCube\ProjectCube.axf" - 0 Error(s), 2 Warning(s).
+"ProjectCube\ProjectCube.axf" - 0 Error(s), 3 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -59,7 +61,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.3.0
-Build Time Elapsed:  00:00:06
+Build Time Elapsed:  00:00:03
 </pre>
 </body>
 </html>
