--- a/MDK-ARM/ProjectCube/ProjectCube.build_log.htm
+++ b/MDK-ARM/ProjectCube/ProjectCube.build_log.htm
@@ -22,21 +22,23 @@ Dialog DLL:      TCM.DLL V1.36.2.0
  
 <h2>Project:</h2>
 D:\Diplomarbeit\Hauptprogramm\Truck_Assistant\MDK-ARM\ProjectCube.uvprojx
-Project File Date:  10/10/2019
+Project File Date:  10/17/2019
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'D:\Diplomarbeit\Keilv5\ARM\ARMCC\Bin'
 Build target 'ProjectCube'
 compiling main.c...
-../Src/main.c(175): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+../Src/main.c(165): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+  			velocity[i] = (3.3*velocityadc[i])/1024 ;
+../Src/main.c(182): warning:  #1035-D: single-precision operand implicitly converted to double-precision
   		if((sensork > 0.1)&&(sensork <= 6)) {
-../Src/main.c(103): warning:  #550-D: variable "value"  was set but never used
+../Src/main.c(105): warning:  #177-D: variable "value"  was declared but never referenced
   	int value;
-../Src/main.c: 2 warnings, 0 errors
+../Src/main.c: 3 warnings, 0 errors
 linking...
-Program Size: Code=20024 RO-data=560 RW-data=448 ZI-data=31616  
+Program Size: Code=20276 RO-data=560 RW-data=448 ZI-data=32088  
 FromELF: creating hex file...
-"ProjectCube\ProjectCube.axf" - 0 Error(s), 2 Warning(s).
+"ProjectCube\ProjectCube.axf" - 0 Error(s), 3 Warning(s).
 
 <h2>Software Packages used:</h2>
 
