Sensorvalues können über uart übertragen werden

--- a/MDK-ARM/ProjectCube/ProjectCube.build_log.htm
+++ b/MDK-ARM/ProjectCube/ProjectCube.build_log.htm
@@ -28,15 +28,15 @@ Project File Date:  12/06/2019
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'D:\Diplomarbeit\Keilv5\ARM\ARMCC\Bin'
 Build target 'ProjectCube'
 compiling main.c...
-../Src/main.c(189): warning:  #167-D: argument of type "unsigned char *" is incompatible with parameter of type "char *restrict"
-  		snprintf(velocityASCII,10000,"velocity:%d\n\r",velocity[im]) ;
-../Src/main.c(190): warning:  #167-D: argument of type "unsigned char *" is incompatible with parameter of type "char *restrict"
-  		snprintf(steeringASCII,10000,"steering:%d\n\r",steering[im]) ;
-../Src/main.c(123): warning:  #177-D: variable "setval"  was declared but never referenced
+../Src/main.c(206): warning:  #167-D: argument of type "unsigned char *" is incompatible with parameter of type "char *restrict"
+  		snprintf(velocityASCII,10000,"velocity:%d\n\r",velocity[count_10ms]) ;
+../Src/main.c(207): warning:  #167-D: argument of type "unsigned char *" is incompatible with parameter of type "char *restrict"
+  		snprintf(steeringASCII,10000,"steering:%d\n\r",steering[count_10ms]) ;
+../Src/main.c(124): warning:  #177-D: variable "setval"  was declared but never referenced
   	int setval = 0;
 ../Src/main.c: 3 warnings, 0 errors
 linking...
-Program Size: Code=23652 RO-data=568 RW-data=492 ZI-data=71716  
+Program Size: Code=23696 RO-data=568 RW-data=492 ZI-data=71716  
 FromELF: creating hex file...
 "ProjectCube\ProjectCube.axf" - 0 Error(s), 3 Warning(s).
 
@@ -61,7 +61,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.3.0
-Build Time Elapsed:  00:00:07
+Build Time Elapsed:  00:00:04
 </pre>
 </body>
 </html>
