einnfügen von GPIO AUto Hand betrieb Pin, Fuzzy FUnktionen

--- a/MDK-ARM/ProjectCube/ProjectCube.build_log.htm
+++ b/MDK-ARM/ProjectCube/ProjectCube.build_log.htm
@@ -26,61 +26,55 @@ Project File Date:  12/30/2019
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\ARM\ARMCC\Bin'
-Rebuild target 'ProjectCube'
+Build target 'ProjectCube'
 assembling startup_stm32f767xx.s...
 compiling usb_device.c...
 compiling usbd_conf.c...
 compiling main.c...
-../Src/main.c(226): warning:  #167-D: argument of type "unsigned char *" is incompatible with parameter of type "char *restrict"
+../Src/main.c(235): warning:  #167-D: argument of type "unsigned char *" is incompatible with parameter of type "char *restrict"
   						snprintf(velocityASCII,10000,"v %d\r",velocity[icom]) ;
-../Src/main.c(229): warning:  #167-D: argument of type "char *" is incompatible with parameter of type "uint8_t *"
+../Src/main.c(238): warning:  #167-D: argument of type "char *" is incompatible with parameter of type "uint8_t *"
   						HAL_UART_Transmit(&huart3,steeringASCII,sizeof(steeringASCII),1);
-../Src/main.c(127): warning:  #177-D: variable "setval"  was declared but never referenced
+../Src/main.c(129): warning:  #177-D: variable "setval"  was declared but never referenced
   	int setval = 0;
 ../Src/main.c: 3 warnings, 0 errors
 compiling stm32f7xx_it.c...
-compiling usbd_desc.c...
 compiling usbd_cdc_if.c...
-compiling NumType_F4.c...
-compiling FuzzyV1_F4.c...
-..\Src\FuzzyV1_F4.c(226): warning:  #144-D: a value of type "const char *" cannot be used to initialize an entity of type "const signed char *"
-     FuzzyV1_F4_RuleBase_pre,
-..\Src\FuzzyV1_F4.c: 1 warning, 0 errors
-compiling fuzzy_F4.c...
-compiling stm32f7xx_hal_pcd_ex.c...
-compiling stm32f7xx_hal_msp.c...
+compiling usbd_desc.c...
+compiling system_stm32f7xx.c...
 compiling stm32f7xx_hal_pcd.c...
-compiling stm32f7xx_hal_adc_ex.c...
-compiling stm32f7xx_hal_adc.c...
+compiling stm32f7xx_hal_msp.c...
+compiling stm32f7xx_hal_pcd_ex.c...
 compiling stm32f7xx_ll_usb.c...
-compiling stm32f7xx_hal_cortex.c...
-compiling stm32f7xx_hal_eth.c...
-compiling stm32f7xx_hal_tim.c...
-compiling stm32f7xx_hal_tim_ex.c...
-compiling stm32f7xx_hal_uart.c...
-compiling stm32f7xx_hal_uart_ex.c...
-compiling stm32f7xx_hal_flash.c...
 compiling stm32f7xx_hal_rcc.c...
-compiling stm32f7xx_hal_rcc_ex.c...
 compiling stm32f7xx_hal_flash_ex.c...
+compiling stm32f7xx_hal_flash.c...
+compiling stm32f7xx_hal_rcc_ex.c...
 compiling stm32f7xx_hal_gpio.c...
 compiling stm32f7xx_hal_dma.c...
-compiling stm32f7xx_hal_pwr.c...
-compiling stm32f7xx_hal_pwr_ex.c...
 compiling stm32f7xx_hal_dma_ex.c...
-compiling stm32f7xx_hal.c...
+compiling stm32f7xx_hal_cortex.c...
+compiling stm32f7xx_hal_pwr_ex.c...
+compiling stm32f7xx_hal_pwr.c...
 compiling stm32f7xx_hal_i2c_ex.c...
+compiling stm32f7xx_hal.c...
 compiling stm32f7xx_hal_i2c.c...
 compiling stm32f7xx_hal_exti.c...
-compiling system_stm32f7xx.c...
+compiling stm32f7xx_hal_adc_ex.c...
+compiling stm32f7xx_hal_adc.c...
+compiling stm32f7xx_hal_eth.c...
+compiling stm32f7xx_hal_tim_ex.c...
+compiling stm32f7xx_hal_tim.c...
+compiling stm32f7xx_hal_uart_ex.c...
 compiling usbd_core.c...
-compiling usbd_ioreq.c...
+compiling stm32f7xx_hal_uart.c...
 compiling usbd_ctlreq.c...
 compiling usbd_cdc.c...
+compiling usbd_ioreq.c...
 linking...
-Program Size: Code=24968 RO-data=568 RW-data=492 ZI-data=71876  
+Program Size: Code=28740 RO-data=1372 RW-data=500 ZI-data=71892  
 FromELF: creating hex file...
-"ProjectCube\ProjectCube.axf" - 0 Error(s), 4 Warning(s).
+"ProjectCube\ProjectCube.axf" - 0 Error(s), 3 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -103,7 +97,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.2.0
-Build Time Elapsed:  00:02:04
+Build Time Elapsed:  00:01:40
 </pre>
 </body>
 </html>
